--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 
   "scripts": {
     "test": "node ./test/index.js",
-    "cover": "./node_modules/.bin/istanbul cover --report html --print detail ./test/index.js"
+    "cover": "./node_modules/.bin/istanbul cover --report html --print both ./test/index.js",
+    "travis-test": "./node_modules/.bin/istanbul cover --report none --print both ./test/index.js"
   }
 }
